[package]
name = "sailfish-minify"
version = "0.1.0"
authors = ["Abrudan Paul - Andrei <paulandreiabrudan@protonmail.com>"]
description = "Hacky but simple minification support for sailfish, using html-minifier by default"
homepage = "https://github.com/pauldotsh/sailfish-minify"
repository = "https://github.com/pauldotsh/sailfish-minify"
keywords = ["minification", "html", "sailfish"]
categories = ["template-engine"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sailfish_minify"
proc-macro = true
test = false
doctest = false

[features]
default = ["config"]
# enable configuration file (sailfish.toml) support
config = ["sailfish-compiler/config"]

[dependencies]
proc-macro2 = "1.0.56"
syn = "2.0.66"
quote = "1.0.36"


[dependencies.sailfish-compiler]
version = "0.8.3"
default-features = false
features = ["procmacro"]
