[package]
name = "sailfish-minify"
version = "0.10.0"
authors = ["Abrudan Paul - Andrei <paulandreiabrudan@proton.me>"]
description = "Hacky but simple minification support for sailfish, using html-minifier by default"
homepage = "https://github.com/pauldotsh/sailfish-minify"
repository = "https://github.com/pauldotsh/sailfish-minify"
keywords = ["minification", "html", "sailfish"]
categories = ["template-engine"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sailfish_minify"
proc-macro = true
test = false
doctest = false

[features]
default = ["minify-components"]
minify-components = []

[dependencies]
proc-macro2 = "1.0.101"
syn = "2.0.106"
regex = "1.11.2"
quote = "1.0.40"
rayon = "1.11.0"


[dependencies.sailfish-compiler]
version = "0.10.0"
default-features = false
features = ["procmacro"]
